B-F Backup Sandbox 30.4.12/src/objects/Promotion_Costs__c.object
<CustomObject>
    <description>Promotions Costs, by brand and cost type</description>
    <fields>
        <fullName>Brand__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Brand</label>
        <referenceTo>Brand__c</referenceTo>
        <relationshipLabel>Promotion Costs</relationshipLabel>
        <relationshipName>Promotion_Costs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Cost_Type__c</fullName>
        <label>Cost Type</label>
        <picklist>
            <picklistValues>
                <fullName>Agency Admin</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Agency Labor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chiller Machines</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Equipment Rental</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Incentive</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Local POS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Media</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>National POS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Printing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Samples</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sponsorship Fee</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sweepstakes</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Promotion_Cost__c</fullName>
        <description>Cost of promotion expense</description>
        <label>$ Cost</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Promotion__c</fullName>
        <label>Promotion</label>
        <referenceTo>Promotion__c</referenceTo>
        <relationshipLabel>Promotion Costs</relationshipLabel>
        <relationshipName>Promotion_Costs</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Promotion Costs</label>
    <nameField>
        <displayFormat>PCT-{YYYY}{000000}</displayFormat>
        <label>Promotion Cost #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Promotion Costs</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>